--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -8,18 +8,15 @@
     <meta name="author" content="Fedor Lukhmanov" />
 
     <title>News Analyzer</title>
-    <link
-      rel="stylesheet"
-      href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
-    />
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.css[0] %>" />
     <link rel="shortcut icon" href="<%=require('./images/favicon.ico' )%>" />
   </head>
   <body>
     <div class="page">
       <header class="header header_white-content header_absolute">
         <a class="header__logo header__logo_white" href="./">NewsAnalyzer</a>
-        <nav class="header__links-container"
-          ><a
+        <nav class="header__links-container">
+          <a
             class="link header__link header__link_white header__link_selected"
             href="./"
             >Главная</a
@@ -32,10 +29,10 @@
       <main class="main">
         <section class="search">
           <h1 class="search__title">Что в мире творится?</h1>
-          <p class="search__subtitle"
-            >Введите в поиске любую тему и узнайте, насколько популярной она
-            была в новостях за прошедшую неделю.</p
-          >
+          <p class="search__subtitle">
+            Введите в поиске любую тему и узнайте, насколько популярной она была
+            в новостях за прошедшую неделю.
+          </p>
           <form class="search__form">
             <input
               class="search__input"
@@ -56,27 +53,27 @@
           />
           <div class="author__container">
             <h2 class="author__title">Об авторе</h2>
-            <p class="author__paragraph"
-              >Это блок с описанием автора проекта. Здесь следует указать, как
+            <p class="author__paragraph">
+              Это блок с описанием автора проекта. Здесь следует указать, как
               вас зовут, чем вы занимаетесь, какими технологиями разработки
-              владеете.</p
-            >
-            <p class="author__paragraph"
-              >Также можно рассказать о процессе обучения в Практикуме, чему вы
-              тут научились, и чем можете помочь потенциальным заказчикам.</p
-            ></div
-          >
+              владеете.
+            </p>
+            <p class="author__paragraph">
+              Также можно рассказать о процессе обучения в Практикуме, чему вы
+              тут научились, и чем можете помочь потенциальным заказчикам.
+            </p>
+          </div>
         </section>
       </main>
-      <footer class="footer"
-        ><p class="footer__copyright">&copy; 2020 Supersite</p>
-        <nav class="footer__link-list"
-          ><a class="link footer__link" href="./">Главная</a
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2020 Supersite</p>
+        <nav class="footer__link-list">
+          <a class="link footer__link" href="./">Главная</a
           ><a class="link footer__link" href="./about/">О проекте</a
           ><a class="link footer__link" href="https://praktikum.yandex.ru/"
             >Яндекс.Практикум</a
-          ></nav
-        >
+          >
+        </nav>
         <div class="footer__icons-container">
           <a
             class="footer__social-icon footer__social-icon_github"
@@ -89,6 +86,6 @@
         </div>
       </footer>
     </div>
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    <script src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
   </body>
 </html>
